# bulletin-board-bot

./: .example.env  README.rst  alembic.example.ini  pyproject.toml
aiogram_template/: config.py  main.py
aiogram_template/handlers/: __init__.py
alembic/: env.py
alembic/versions/: 5d7b6f3d068e_create_ad_table.py  afe1ef71bc36_create_favorite_table.py
bulletin_board_bot/: config.py  dependencies.py  di.py  keyboards.py  main.py
bulletin_board_bot/handlers/: __init__.py  ad_browser.py  common.py
bulletin_board_bot/keyboards/: __init__.py  ad_browser.py
bulletin_board_bot/middlewares/: __init__.py  di.py  userdata.py
bulletin_board_bot/misc/: di.py  errors.py  router.py  user_data.py
bulletin_board_bot/models/: __init__.py  ad.py  user.py
bulletin_board_bot/services/: ad_service.py  user_service.py
bulletin_board_bot/services/alchemy/: __init__.py  ad_service.py  tables.py  user_service.py
bulletin_board_bot/services/alchemy/scripts/: insert_test_data.py
tests/: test_aiogram_template.py  test_compute_update_method.py  test_di.py  test_user_data.py  test_webhook_update_method.py
